Design bugfix: Icon blocks stretching beyond width of screen

--- a/app/assets/stylesheets/application/components/iconblock.scss
+++ b/app/assets/stylesheets/application/components/iconblock.scss
@@ -51,6 +51,7 @@
 .circle-icon-outer {
     display: flex;
     padding: 2em 1em 3em;
+    box-sizing: border-box;
     align-items: center;
 
     &.wide {
